add migrations add api

--- a/CustomerService/appsettings.json
+++ b/CustomerService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "postgres": "Server=localhost;Port=5432;Database=CustomerDb;User Id=postgres;Password=postgres;"
+  }
 }
